--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Assets\Script\Parametrs\EcologyController.cs" />
     <Compile Include="Assets\Script\CameraController.cs" />
     <Compile Include="Assets\Script\SaveData.cs" />
+    <Compile Include="Assets\Script\StartGameController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
