winmerge in gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,3 +2,14 @@
 	name = Unity SmartMerge (UnityYamlMerge)
 	driver = \"C:\Program Files\Unity\Hub\Editor\6000.0.34f1\Editor\Data\Tools\UnityYAMLMerge.exe\" merge -h -p --force --fallback none %O %B %A %A
 	recursive = binary
+[diff]    
+   tool = winmerge
+[difftool "winmerge"]
+   cmd = "winmerge"
+
+[merge]
+   tool = winmerge
+[mergetool "winmerge"]
+    cmd = "winmerge"
+    trustExitCode = false  
+    keepBackup = false
